attempting to fix mobile overflow on delpoyment

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@ html {
   min-height: 100vh;
   min-width: 100vw;
   overflow-x: hidden;
-  
 }
 
 body {
@@ -12,6 +11,5 @@ body {
   height: 100%;
   width: 100%;
   font-family: "Montserrat", sans-serif;
-  overflow-x: hidden;
   display: initial;
 }
